--- a/resources/deprecated-front-end/css/sprout-invoices.style.css
+++ b/resources/deprecated-front-end/css/sprout-invoices.style.css
@@ -703,6 +703,9 @@ div#vcards {
 	background-color: #DDD;
 	color: #7C7C7C;
 }
+.button.change_payment_amount {
+	margin-left: 10px;
+}
 
 #header_additional_info {
 	padding: 1em;
