--- a/views/templates/theme/basic/docs.css
+++ b/views/templates/theme/basic/docs.css
@@ -541,7 +541,9 @@ body {
       line-height: 28px;
       color: rgba(0, 0, 0, 0.75);
       transition-duration: 0.25s;
-      zoom: 1.3; }
+      zoom: 1.3;
+      text-decoration: none;
+      }
       .panel .inner .single_payment_option .toggle {
         zoom: 2;
       }
@@ -766,16 +768,17 @@ a.payment_option.toggle.active {
 }
 #header .sa-message {
     width: auto;
-    padding: 0 12px;
+    padding: 2px 14px;
     display: block;
     margin-bottom: 40px;
-    background-color: #4086b0;
+    background-color: #64a2e5;
     border-radius: 15px;
-    border: 2px solid rgb(207, 225, 235);
-    font-size: 12px;
-    font-weight: 400;
+    /* border: 2px solid rgb(207, 225, 235); */
+    font-size: 14px;
+    font-weight: 600;
     line-height: 28px;
     text-transform: uppercase;
+    color: #fff;
 }
 #header .inner .sa-message:last-of-type {
     margin-bottom: 75px;
