--- a/views/templates/theme/default/docs.css
+++ b/views/templates/theme/default/docs.css
@@ -455,7 +455,9 @@ body {
       line-height: 28px;
       color: rgba(0, 0, 0, 0.75);
       transition-duration: 0.25s;
-      zoom: 1.3; }
+      zoom: 1.3;
+      text-decoration: none;
+      }
       .panel .inner .single_payment_option .toggle {
         zoom: 2;
       }
